--- a/WalletWatcher/Base.lproj/Main.storyboard
+++ b/WalletWatcher/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="p4J-py-QdF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="p4J-py-QdF">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -366,7 +366,7 @@
                         <outlet property="cancelButton" destination="I6Q-MK-eat" id="aRF-wP-OqR"/>
                         <outlet property="enterButton" destination="GlS-1G-p3r" id="a7o-lg-w7C"/>
                         <outlet property="incomeTextField" destination="PkR-Z5-cNQ" id="rGH-1c-5Gy"/>
-                        <segue destination="rhy-2I-gXG" kind="unwind" identifier="unwindSegueToMainView" unwindAction="unwindToMainViewSegueWithSegue:" id="31S-uL-d8o"/>
+                        <segue destination="rhy-2I-gXG" kind="unwind" identifier="unwindToWalletView" unwindAction="unwindToWalletViewWithSegue:" id="UzS-GG-KPh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1e0-0n-pSP" userLabel="First Responder" sceneMemberID="firstResponder"/>
